# rust_webui

./: Cargo.toml  xz.html
src/: main.rs  net.rs  window.rs
