[package]
name = "webui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.0",features=["full"]}
tokio-tungstenite = "0.19.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
ws="0.9.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
actix-web = "4"
jsonrpc-http-server = "18.0"

